strategy pattern for order processing